b페이지 deletemapping 변경